@@ -30,6 +30,7 @@ the true source is the file from which this one was generated.
    \file{docstrip.tcl}{\from{tcldocstrip.dtx}{pkg}}
    \file{docstrip_util.tcl}{\from{tcldocstrip.dtx}{utilpkg}}
    \file{docstrip.test}{\from{tcldocstrip.dtx}{test}}
+   \file{docstrip_util.test}{\from{tcldocstrip.dtx}{utiltest}}
    \usepreamble\empty
    \usepostamble\empty
    \file{docstrip.man}{\from{tcldocstrip.dtx}{man}}
